--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,26 @@
-version: 1.0.{build}
-build_script:
+version: '{build}'
+pull_requests:
+  do_not_increment_build_number: true
+branches:
+  only:
+  - master
+skip_tags: true
+skip_branch_with_pr: true
+max_jobs: 1
+configuration: Release
+init:
+- cmd: git config --global core.autocrlf input
+assembly_info:
+  patch: true
+  file: '**\AssemblyInfo.*'
+  assembly_version: '{version}'
+  assembly_file_version: '{version}'
+  assembly_informational_version: '{version}'
+install:
 - ps: >-
-    $AssemblyFile = "AssemblyInfo.cs"
+    $AssemblyFile = "$env:APPVEYOR_PROJECT_NAME\AssemblyInfo.cs"
 
-    $RegularExpression = [regex] '^\[assembly: AssemblyVersion\(\"(\d*\.\d*\.\d*)\.\d*\"\)\]$'
+    $RegularExpression = [regex] '^\[assembly: AssemblyFileVersion\(\"(\d*\.\d*)\.\d*\.\d*\"\)\]$'
 
     $FileContent = Get-Content $AssemblyFile
 
@@ -17,19 +34,29 @@ build_script:
 
     Update-AppveyorBuild -Version ("{0}.{1}" -f $ver, $env:APPVEYOR_BUILD_NUMBER)
 
-    C:\WINDOWS\Microsoft.NET\Framework\v4.0.30319\csc /out:$env:APPVEYOR_PROJECT_NAME.exe /recurse:*.cs
+    $CommitDateTime = [datetime]::Parse($env:APPVEYOR_REPO_COMMIT_TIMESTAMP)
+
+    $env:BuildDate = $CommitDateTime.AddHours(3).ToString('dd.MM.yyyy')
+
+    Write-Host "Building v$env:APPVEYOR_BUILD_VERSION dated $env:BuildDate"
+build_script:
+- ps: >-
+    $env:SystemRoot\Microsoft.NET\Framework\v4.0.30319\csc /out:$env:APPVEYOR_PROJECT_NAME.exe /recurse:*.cs
 
     7z a $env:APPVEYOR_PROJECT_NAME-v$env:APPVEYOR_BUILD_VERSION.zip *.exe *.md
 artifacts:
 - path: '*.zip'
-  name: Zip
+  name: AppZip
 deploy:
 - provider: GitHub
   tag: v$(appveyor_build_version)
-  release: $(appveyor_project_name)-v$(appveyor_build_version)
-  description: Automatic rebuild
+  release: $(appveyor_project_name) v$(appveyor_build_version)
+  description: '* $(appveyor_repo_commit_message)\n\nThis is an automatic build #$(appveyor_build_number) by AppVeyor $(BuildDate)\nSee more on https://$(appveyor_account_name).github.io/$(appveyor_project_name)/'
   auth_token:
     secure: CePfctnBFd3iDwgVWlGOD6mfxQZrNBHK7IpsCK/deo2vHxA3lTr2nRnhbqpKqchQ
-  artifact: Zip
-  draft: true
+  artifact: AppZip
+  draft: false
+  prerelease: true
   force_update: true
+  on:
+    branch: master
