--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ assembly_info:
   assembly_informational_version: '{version}'
 install:
 - ps: >-
-    $AssemblyFile = "$env:APPVEYOR_PROJECT_NAME\AssemblyInfo.cs"
+    $AssemblyFile = "AssemblyInfo.cs"
 
     $RegularExpression = [regex] '^\[assembly: AssemblyFileVersion\(\"(\d*\.\d*)\.\d*\.\d*\"\)\]$'
 
