--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,7 +43,11 @@ build_script:
 - cmd: >-
     %SystemRoot%\Microsoft.NET\Framework\v4.0.30319\csc /out:%APPVEYOR_PROJECT_NAME%.exe /recurse:*.cs
 
-    7z a %APPVEYOR_PROJECT_NAME%-v%APPVEYOR_BUILD_VERSION%.zip *.exe *.md
+    echo %APPVEYOR_PROJECT_NAME% v%APPVEYOR_BUILD_VERSION% (%BUILDDATE%) >readme.txt
+
+    echo http://%APPVEYOR_ACCOUNT_NAME%.github.io/%APPVEYOR_PROJECT_NAME% >>readme.txt
+
+    7z a %APPVEYOR_PROJECT_NAME%-v%APPVEYOR_BUILD_VERSION%.zip *.exe readme.txt
 artifacts:
 - path: '*.zip'
   name: AppZip
@@ -51,7 +55,7 @@ deploy:
 - provider: GitHub
   tag: v$(appveyor_build_version)
   release: $(appveyor_project_name) v$(appveyor_build_version)
-  description: '* $(appveyor_repo_commit_message)\n\nThis is an automatic build #$(appveyor_build_number) by AppVeyor $(BuildDate)\nSee more on https://$(appveyor_account_name).github.io/$(appveyor_project_name)/'
+  description: '* $(appveyor_repo_commit_message)\n\nBuild #$(appveyor_build_number) by AppVeyor $(BuildDate)\nSee docs on http://$(appveyor_account_name).github.io/$(appveyor_project_name)'
   auth_token:
     secure: CePfctnBFd3iDwgVWlGOD6mfxQZrNBHK7IpsCK/deo2vHxA3lTr2nRnhbqpKqchQ
   artifact: AppZip
