--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,16 +30,18 @@ install:
     foreach($content in $FileContent) {
       $match = [System.Text.RegularExpressions.Regex]::Match($content, $RegularExpression)
       if($match.Success) {
-        $ver = $match.groups[1].value
+        $env:VERSION = $match.groups[1].value
         break;
       }
     }
 
-    Update-AppveyorBuild -Version ("{0}.{1}" -f $ver, $env:APPVEYOR_BUILD_NUMBER)
+    Update-AppveyorBuild -Version ("{0} build {1}" -f $env:VERSION, $env:APPVEYOR_BUILD_NUMBER)
 
     $CommitDateTime = [datetime]::Parse($env:APPVEYOR_REPO_COMMIT_TIMESTAMP)
 
-    $env:BuildDate = $CommitDateTime.ToString('dd.MM.yyyy')
+    $env:BuildDate = $CommitDateTime.ToString('yyyy-MM-dd')
+
+    $env:Site = "http://{0}.github.io/{1}" -f $env:APPVEYOR_ACCOUNT_NAME, $env:APPVEYOR_PROJECT_NAME
 
     Write-Host "Building v$env:APPVEYOR_BUILD_VERSION dated $env:BuildDate"
 build_script:
@@ -48,9 +50,19 @@ build_script:
 
     echo %APPVEYOR_PROJECT_NAME% v%APPVEYOR_BUILD_VERSION% (%BUILDDATE%) >readme.txt
 
-    echo http://%APPVEYOR_ACCOUNT_NAME%.github.io/%APPVEYOR_PROJECT_NAME% >>readme.txt
+    echo %SITE% >>readme.txt
 
-    7z a %APPVEYOR_PROJECT_NAME%-v%APPVEYOR_BUILD_VERSION%.zip *.exe readme.txt
+    echo [InternetShortcut] >readme.url
+
+    echo URL=%SITE% >>readme.url
+
+    echo %APPVEYOR_PROJECT_NAME%.exe >Package
+
+    echo %APPVEYOR_PROJECT_NAME%.cs >>Package
+
+    echo make.cmd >>Package
+
+    7z a %APPVEYOR_PROJECT_NAME%-v%APPVEYOR_BUILD_VERSION%.zip @Package readme.txt readme.url
 artifacts:
 - path: '*.zip'
   name: AppZip
@@ -58,7 +70,7 @@ deploy:
 - provider: GitHub
   tag: v$(appveyor_build_version)
   release: $(appveyor_project_name) v$(appveyor_build_version)
-  description: '* $(appveyor_repo_commit_message)\n\nBuild #$(appveyor_build_number) by AppVeyor $(BuildDate)\nSee docs on http://$(appveyor_account_name).github.io/$(appveyor_project_name)'
+  description: 'Build #$(appveyor_build_number) by AppVeyor $(BuildDate): $(appveyor_repo_commit_message) ([Changelog](https://github.com/$(appveyor_repo_name)/blob/master/CHANGELOG.md))\nSee docs on $(Site)'
   auth_token:
     secure: CePfctnBFd3iDwgVWlGOD6mfxQZrNBHK7IpsCK/deo2vHxA3lTr2nRnhbqpKqchQ
   artifact: AppZip
